--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "firebase": "^10.13.1",
     "idb": "^8.0.0",
-    "next": "14.2.8",
+    "next": "^14.2.11",
     "next-pwa": "^5.6.0",
     "react": "^18",
     "react-dom": "^18"
